--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mysavebot
     env: python
     plan: free
-    buildCommand: "./build.sh"
+    buildCommand: ""
     startCommand: python main.py
     runtime: python
-    pythonVersion: 3.9.13
+    pythonVersion: 3.10.13
