--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: mysavebot
     env: python
     plan: free
-    buildCommand: ""
+    buildCommand: pip install --upgrade pip && pip install -r requirements.txt
     startCommand: python main.py
     runtime: python
     pythonVersion: 3.10.13
